added 3rd problem

--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -33,8 +33,36 @@
     "\n",
     "Given two integers m, n (1 <= m <= n) we want to find all integers between m and n whose sum of squared divisors is itself a square. 42 is such a number.\n",
     "\n",
-    "The result will be an array of arrays or of tuples (in C an array of Pair) or a string, each subarray having two elements, first the number whose squared divisors is a square and then the sum of the squared divisors."
+    "The result will be an array of arrays or of tuples (in C an array of Pair) or a string, each subarray having two elements, first the number whose squared divisors is a square and then the sum of the squared divisors.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data and data1 are two strings with rainfall records of a few cities for months from January to December. The records of towns are separated by \\n. The name of each town is followed by :.\n",
+    "\n",
+    "data and towns can be seen in \"Your Test Cases:\".\n",
+    "\n",
+    "Task:\n",
+    "function: mean(town, strng) should return the average of rainfall for the city town and the strng data or data1 (In R and Julia this function is called avg).\n",
+    "function: variance(town, strng) should return the variance of rainfall for the city town and the strng data or data1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
