--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -65,6 +65,28 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a string of words, you need to find the highest scoring word.\n",
+    "\n",
+    "Each letter of a word scores points according to its position in the alphabet: a = 1, b = 2, c = 3 etc.\n",
+    "\n",
+    "You need to return the highest scoring word as a string.\n",
+    "\n",
+    "If two words score the same, return the word that appears earliest in the original string.\n",
+    "\n",
+    "All letters will be lowercase and all inputs will be valid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
