--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -87,6 +87,17 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that takes an array of numbers (integers for the tests) and a target number. It should find two different items in the array that, when added together, give the target value. The indices of these items should then be returned in a tuple like so: (index1, index2).\n",
+    "\n",
+    "For the purposes of this kata, some tests may have multiple answers; any valid solutions will be accepted.\n",
+    "\n",
+    "The input will always be valid (numbers will be an array of length 2 or greater, and all of the items will be numbers; target will always be the sum of two different items from that array)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
