--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -103,6 +103,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of integers of any length, return an array that has 1 added to the value represented by the array.\n",
+    "\n",
+    "the array can't be empty\n",
+    "only non-negative, single digit integers are allowed\n",
+    "Return nil (or your language's equivalent) for invalid inputs.\n",
+    "\n",
+    "Examples\n",
+    "For example the array [2, 3, 9] equals 239, adding one would return the array [2, 4, 0].\n",
+    "\n",
+    "[4, 3, 2, 5] would return [4, 3, 2, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
