--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -126,6 +126,28 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are given an array(list) strarr of strings and an integer k. Your task is to return the first longest string consisting of k consecutive strings taken in the array.\n",
+    "\n",
+    "Example:\n",
+    "longest_consec([\"zone\", \"abigail\", \"theta\", \"form\", \"libe\", \"zas\", \"theta\", \"abigail\"], 2) --> \"abigailtheta\"\n",
+    "\n",
+    "n being the length of the string array, if n = 0 or k > n or k <= 0 return \"\".\n",
+    "\n",
+    "Note\n",
+    "consecutive strings : follow one after another without an interruption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
