--- a/code_wars.ipynb
+++ b/code_wars.ipynb
@@ -148,6 +148,26 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are given a secret message you need to decipher. Here are the things you need to know to decipher it:\n",
+    "\n",
+    "For each word:\n",
+    "\n",
+    "the second and the last letter is switched (e.g. Hello becomes Holle)\n",
+    "the first letter is replaced by its character code (e.g. H becomes 72)\n",
+    "Note: there are no special characters used, only letters and spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
